@@ -3,7 +3,6 @@ develop = .
 parts = test
 extends = http://raw.github.com/zopefoundation/groktoolkit/master/grok.cfg
 extensions =
-   buildout.dumppickedversions
    mr.developer
 versions = versions
 auto-checkout = 
@@ -17,4 +16,3 @@ sources = sources
 recipe = zc.recipe.testrunner
 eggs = zeam.form.base [test]
 defaults = ['--tests-pattern', '^f?tests$', '-v', '-c', '--udiff', '--package=zeam.form.base']
-
