@@ -1,8 +1,9 @@
+# -*- coding: utf-8 -*-
 
 import unittest
-
-from zope.testing import doctest
+import doctest
 from zeam.form.base.testing import FunctionalLayer
+
 
 def test_suite():
     optionflags = doctest.NORMALIZE_WHITESPACE | doctest.ELLIPSIS
